; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_setUTCMonth.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_Dp_setUTCMonth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @Dp_setUTCMonth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Dp_setUTCMonth(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call double @js_todate(i32* %7, i32 0)
  store double %8, double* %3, align 8
  %9 = load double, double* %3, align 8
  %10 = call double @YearFromTime(double %9)
  store double %10, double* %4, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call double @js_tonumber(i32* %11, i32 1)
  store double %12, double* %5, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = load double, double* %3, align 8
  %15 = call i32 @DateFromTime(double %14)
  %16 = call double @js_optnumber(i32* %13, i32 3, i32 %15)
  store double %16, double* %6, align 8
  %17 = load i32*, i32** %2, align 8
  %18 = load double, double* %4, align 8
  %19 = load double, double* %5, align 8
  %20 = load double, double* %6, align 8
  %21 = call i32 @MakeDay(double %18, double %19, double %20)
  %22 = load double, double* %3, align 8
  %23 = call i32 @TimeWithinDay(double %22)
  %24 = call i32 @MakeDate(i32 %21, i32 %23)
  %25 = call i32 @js_setdate(i32* %17, i32 0, i32 %24)
  ret void
}

declare dso_local double @js_todate(i32*, i32) #1

declare dso_local double @YearFromTime(double) #1

declare dso_local double @js_tonumber(i32*, i32) #1

declare dso_local double @js_optnumber(i32*, i32, i32) #1

declare dso_local i32 @DateFromTime(double) #1

declare dso_local i32 @js_setdate(i32*, i32, i32) #1

declare dso_local i32 @MakeDate(i32, i32) #1

declare dso_local i32 @MakeDay(double, double, double) #1

declare dso_local i32 @TimeWithinDay(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
